<resources>
    <string name="app_name">Accounting</string>
    <string name="main_heading">ACCOUNTING AND ANALYSIS</string>
    <string name="open_new_account_book">OPEN NEW ACCOUNT BOOK</string>
    <string name="import_and_export">IMPORT AND EXPORT</string>
    <string name="your_account_books">Your account books</string>
    <string name="name">NAME :</string>
    <string name="enter_new_account_name">Enter new account name</string>
    <string name="import_text">IMPORT</string>
    <string name="export_text">EXPORT</string>
    <string name="enter_expense">ENTER INCOME/EXPENSE</string>
    <string name="view_reports">VIEW REPORTS</string>
    <string name="add_item">ADD ITEM</string>
    <string name="add_unit">ADD UNIT</string>
    <string name="quantity">QUANTITY :</string>
    <string name="enter_quantity">enter quantity</string>
    <string name="unit">UNIT :</string>
    <string name="amount">AMOUNT :</string>
    <string name="enter_price">enter price</string>
    <string name="add_to_account_book">ADD TO ACCOUNT BOOK</string>
    <string name="enter_item">ENTER ITEM</string>
    <string name="add">ADD</string>
    <string name="generate_report">GENERATE REPORT</string>
    <string name="display_expense_report">DISPLAY EXPENSE REPORT</string>
    <string name="display_profit_loss_report">DISPLAY PROFIT/LOSS REPORT</string>
    <string name="pdf_view">PDF VIEW</string>
    <string name="income_expense">INCOME/EXPENSE</string>
    <string name="expense">EXPENSE</string>
    <string name="income">INCOME</string>
    <string name="unit_of_measure">UNIT OF MEASURE:</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="enter">enter</string>
    <string name="account_name">Account name</string>
    <string name="create">CREATE</string>
    <string name="submit">SUBMIT</string>
    <string name="item_name">ITEM NAME</string>
    <string name="quantity_1">QUANTITY</string>
    <string name="amount_1">AMOUNT</string>
    <string name="info_imp_exp">Click on Import to restore data. Click on Export to backup data. Export should be done before Import</string>
    <string-array name="units">
        <item>kg</item>
        <item>lt</item>
        <item>number</item>
        <item>none</item>
    </string-array>

    <string-array name="view_report_options">
        <item>DISPLAY TODAY</item>
        <item>DISPLAY THIS WEEK</item>
        <item>DISPLAY LAST WEEK</item>
        <item>DISPLAY THIS MONTH</item>
        <item>DISPLAY LAST MONTH</item>
        <item>LAST 3 MONTHS</item>
        <item>LAST 6 MONTHS</item>
        <item>DISPLAY 1 YEAR</item>
        <item>DISPLAY ALL DATA</item>
    </string-array>

</resources>