<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8"
    android:background="@color/navajowhite">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView11"
                style="@style/heading2"
                android:layout_width="130sp"
                android:layout_height="35sp"
                android:text="@string/item_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView13"
                style="@style/heading2"
                android:layout_width="120sp"
                android:layout_height="35sp"
                android:text="@string/quantity_1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView14"
                style="@style/heading2"
                android:layout_width="100sp"
                android:layout_height="35sp"
                android:text="@string/amount_1"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>